--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,7 +2,7 @@ name: Deploy to GitHub Pages
 
 on:
   schedule:
-    - cron: '*/30 * * * *'  # 每30分钟运行一次
+    - cron: '0/30 * * * *'  # 每30分钟运行一次
   workflow_dispatch:  # 允许手动触发
 
 jobs:
