重构配置转换工具，移除旧代码并引入新的配置解析逻辑

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,7 +23,7 @@ jobs:
           pip install -r requirements.txt
 
       - name: Run config conversion script
-        run: python config_convert.py
+        run: python main.py
 
       - name: Push to Pages repo
         run: |
