更新工作流配置，修正运行脚本的名称

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,7 +22,7 @@ jobs:
           python -m pip install --upgrade pip
           pip install -r requirements.txt
 
-      - name: Run config conversion script
+      - name: Run config converting script
         run: python main.py
 
       - name: Push to Pages repo
