修复创建目录的命令，确保在复制配置文件时不会出错

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,7 +29,7 @@ jobs:
 
       - name: Copy config file to new location for temporary migration solution
         run: |
-          mkdir ./other-assets
+          mkdir -p ./other-assets
           cp ./ds-config.json ./other-assets/ds-config.json
 
       - name: Push to Pages repo
